--- a/app/views/layouts/_flash_messages.html.erb
+++ b/app/views/layouts/_flash_messages.html.erb
@@ -1,3 +1,3 @@
-<% flash.each do |taskapp_type, taskapp| %>
-  <div><% taskapp %></div>
+<% flash.each do |task_type, task| %>
+  <div><% task %></div>
 <% end %>
