--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,6 +1,6 @@
 <h1>タスク新規作成ページ</h1>
 
-<%= form_for(@taskapp) do |f|%>
+<%= form_for(@task) do |f|%>
   <%= f.label :content, "タスク" %>
   <%= f.text_field :content%>
   
@@ -8,4 +8,4 @@
   
 <%end%>
 
-<%= link_to "タスク一覧画面へ戻る", taskapps_path %>
+<%= link_to "タスク一覧画面へ戻る", tasks_path %>
