--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -3,7 +3,7 @@
 
 
 
-    <%= form_for(@task) do |f| %>
+    <%= form_for(task) do |f| %>
     
       <% if task.errors.any? %>
         <div class="alert alert-warning">
