--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -8,21 +8,35 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/">Tasklist</a>
+          <ul style="list-style:none;">
+            <li class="navbar-brand"><%= link_to "Tasklist", tasks_path %></li>
+          </ul>
       </div>
       
       
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
+          
           <% if logged_in? %>
-          
-            <li><%= link_to  '新規タスクの投稿', new_task_path %></li>
-          
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.name %> <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                  <li><%= link_to "アカウント詳細", user_path(current_user) %></li>
+                  <li role="separator" class="divider"></li>
+                  <li><%= link_to '新規タスクの投稿', new_task_path %></li>
+                  <li role="separator" class="divider"></li>
+                  <li><%= link_to "Logout", logout_path, method: :delete%></li>
+              </ul>
+            </li>
+                
+            
           <% else %>
-          
             <li><%= link_to "Signup", signup_path %></li>
             <li><%= link_to "Login", login_path %></li>
+            
           <% end %>
+          
+          
         </ul>
       </div>
     </div>
