--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -9,7 +9,7 @@
           <span class="icon-bar"></span>
         </button>
           <ul style="list-style:none;">
-            <li class="navbar-brand"><%= link_to "Tasklist", tasks_path %></li>
+            <li class="navbar-brand"><%= link_to "Tasklist", root_path %></li>
           </ul>
       </div>
       
