--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -1,5 +1,33 @@
 <% if logged_in? %>
-  <p>ログイン完了ユーザ: <%= current_user.name %></p>
+  <h1>タスク一覧</h1>
+    
+    <% if @tasks.any? %>
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th>id</th>
+            <th>ステータス</th>
+            <th>内容</th>
+            
+          </tr>
+        </thead>
+        <tbody>
+          <% @tasks.each do |task|%>
+            <tr>
+              <td><%= link_to task.id, task %></td>
+              <td><%= task.status%></td>
+              <td><%= task.content%></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+      
+  
+    <% end %>
+    
+  
+  <%= link_to "新規タスクの追加", new_task_path, class: "btn btn-primary" %>
+  
 <% else %>
   <div class="center jumbotron">
     <div class="text-center">
